Work on mobile phone issues.
This should allow the user to scroll
in he needs to get rid of the address bar at the time,
but not at any other times.

This also prints some debug info to the screen.
I plan to do more work on this.

--- a/src/internal-table-of-contents.css
+++ b/src/internal-table-of-contents.css
@@ -31,7 +31,8 @@ body {
   padding: 0;
   height: 100vh;
   width: 100vw;
-  overflow: clip;
+  overflow-x: clip;
+  overflow-y: auto;
 }
 #toc {
   min-width: 25ch;
